gcc/testsuite/rust/rustc/ui/rust-2024/unsafe-extern-blocks/unsafe-on-extern-block-issue-126756_dg.rs
//@ run-rustfix

#![allow(dead_code)]

extern "C" {
    unsafe fn foo(); // { dg-error "" "" { target *-*-* } }
}

fn main() {}

